# beaverdam

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  LICENCE  README.md  build_database.py  codemeta.json  config.toml  config_template.toml  main.py  pyproject.toml
assets/: custom.css
beaverdam/_core/: metadatasource.py
beaverdam/builder/: build_database.py
beaverdam/viewer/: builduielements_dash.py  colours.py  presenter.py  uielement.py  view_dash.py
example/: README.md  config_countries.toml  config_countries_mongodb.toml  config_countries_tinydb.toml
src/: beaverdam_core.py  beaverdam_views_dash.py  builduielements_dash.py  configparser.py  controller.py  core.py  datafigure.py  datafigure_dash.py  datafigurepresenter.py  datatable.py  datatable_dash.py  datatablecore.py  datatablepresenter.py  filterchecklist.py  filterchecklist_dash.py  filterchecklistpresenter.py  metadatafiletools.py  metadatasource.py  parser.py  pluralize.py  presenter.py  presenters.py  resetbutton.py  resetbutton_dash.py  theme_plotly.py  theme_plots.py  uielement.py  uielementpresenter.py  view.py  view_dash.py  visualized_object.py  visualizedobjectpresenter.py
src/beaverdam/_core/: __init__.py  configparser.py  core.py  datatablecore.py  metadatasource.py
src/beaverdam/builder/: __init__.py  build_database.py  metadatafiletools.py  pluralize.py
src/beaverdam/cli/: __init__.py  cli.py
src/beaverdam/viewer/: __init__.py  builduielements_dash.py  colours.py  controller.py  dash_view.py  plotly_modebarlayout.py  plotly_theme.py  presenter.py  run_ui.py  uielement.py  view.py
src/beaverdam/viewer/_assets/: custom.css
