[tool.poetry]
name = "beaverdam"
version = "0.1.0"
description = ""
authors = ["Heather More <hmore@sfu.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.3.2"
dash = "^2.6.2"
dash-extensions = "^0.1.6"
pandas = "^1.5.1"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
