[tool.poetry]
name = "beaverdam"
version = "0.1.0"
description = ""
authors = ["Heather More <hmore@sfu.ca>"]
license = "BSD-3-Clause"
include = [
    "LICENCE",
]

packages = [{include = "beaverdam", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.3.2"
dash = "^2.6.2"
dash-extensions = "^0.1.6"
pandas = ">=2.1.0"
tomli = "^2.0.1"
plotly = "^5.13.1"
dash-bootstrap-components = ">=1.5.0"
dash-trich-components = "^1.0.0"
dash-mantine-components = "^0.12.1"
dash-bootstrap-templates = "^1.1.1"
odML = "^1.5.4"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"

[tool.poetry.scripts]
beaverdam_builder = 'beaverdam.builder:build_database'
beaverdam_viewer = 'beaverdam.viewer:run_ui'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
